# KB-Eval

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.en.md  README.md  alembic.ini  build-offline-package.ps1  build-offline-package.sh  deploy-docker.bat  deploy-docker.ps1  docker-compose.offline.yml  docker-compose.yml  pyproject.toml  verify.bat  verify.ps1  verify.sh  今日工作总结-2026-06-23.md
backend/: __init__.py  app.py  error_codes.py  schemas.py
config/: mineru.example.json
datasets/: README.md
docker/: backend-entrypoint.sh
docs/: API契约.md  前端页面设计.md  开发任务拆分.md  技术选型与对比.md  持久化设计.md  操作手册.md  数据集规范.md  设计概要.md
frontend/: .env  .env.example  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
kb_eval/: __init__.py  async_dify_client.py  dataset.py  dataset_generator.py  dify_client.py  errors.py  logging_config.py  markitdown_converter.py  metrics.py  mineru_api.py  progress_coalescer.py  report.py  retrieval_utils.py  runner.py  runner_async.py  runner_subprocess.py
scripts/: clean_test_pollution.py  migrate_reports_to_db.py
tests/: __init__.py  _db_fixture.py  test_dataset_delete.py  test_dataset_generation_markitdown_dispatch.py  test_dataset_generation_partial_mineru.py  test_dataset_review_gate.py  test_dify_client.py  test_dify_connection_configs.py  test_knowledge_bases_endpoint.py  test_logging_config.py  test_markitdown_converter.py  test_metrics.py  test_mineru_api.py  test_progress_coalescer.py  test_run_claim_protocol.py  test_run_compare.py  test_run_compare_api.py  test_run_delete.py  (+5 more)
(+86 files in other folders)
