[project]
name = "dify-kb-eval"
version = "1.0.4"
description = "Dify knowledge-base retrieval evaluation system"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.30",
    "fastapi>=0.135.3",
    "langsmith>=0.4.0",
    "markitdown[pdf]",
    "psycopg[binary]>=3.2",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.44.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kb_eval*", "backend*"]
namespaces = false

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
